# Capstone-Design-Team2

./: .gitignore  README.md  Untitled Document 1  frames_2025-02-05_23.44.39.gv  gps_path_map.html
.github/: PULL_REQUEST_TEMPLATE.md
application/: Readme.md  Untitled-1.py  button_node.py  goal_sender_example.py  hmi_env.yml  hmi_planning_node.py  intent_node.py  keyboard_node.py  package.xml  requirements.txt  requirements_clean.txt  setup.py  stt_node.py  tts_node.py  ttstest.py  vito_stt_client_pb2.py  vito_stt_client_pb2_grpc.py
application/launch/: application_launch.py
custom_micro_ros/: package.xml  setup.cfg  setup.py
custom_micro_ros/custom_micro_ros/: SerialBridgeNode.py  plotter.py  sensor_log_20250618_013047.csv  sensor_log_20250618_013213.csv  sensor_log_20250618_014233.csv  sensor_log_20250618_014249.csv  sensor_log_20250618_014349.csv  sensor_log_20250618_014605.csv  sensor_log_20250618_014842.csv  sensor_log_20250618_015028.csv  sensor_log_20250618_020258.csv  sensor_log_20250618_020550.csv  sensor_log_20250618_020728.csv  sensor_log_20250618_021219.csv  sensor_log_20250618_021826.csv  sensor_log_20250618_022138.csv  sensor_log_20250618_022321.csv  sensor_log_20250618_022833.csv  (+62 more)
gb_localization/: CMakeLists.txt  package.xml
grandslam_description/: package.xml  setup.cfg  setup.py
hardware_bringup/: package.xml  setup.cfg  setup.py
hmi_interface/: CMakeLists.txt  package.xml
install/: setup.bash  setup.sh  setup.zsh
log/: latest_build  latest_list
nav2_bringup/: package.xml  setup.py
navigation2/obstacle_param_publisher/obstacle_param_publisher/: package.xml  setup.cfg  setup.py
navigation2/obstacle_param_publisher/obstacle_param_publisher/obstacle_param_publisher/: keyboard_obstacle_publisher.py  lidar_processor.py  obstacle_integration_node.py  obstacle_param_publisher.py
sensor_bringup/: package.xml  setup.cfg  setup.py
vision_bringup/: Vision.rviz  package.xml  setup.cfg  setup.py
vision_bringup/lanenet_model/lanenet/: LaneNet.py  train_lanenet.py
vision_bringup/lanenet_model/utils/: cli_helper_test.py
vision_bringup/launch/: grad_final_vis.py  obstacle_launch.py  run_rsp.sh  sensors.sh
vision_bringup/vision_bringup/: crosswalk_info_log_30.txt  crosswalk_service.py  lanenet_process.py  obstacle_detector.py  obstacle_detector_crosswalk.py  pcd_processs.py  plane_color.py  slic_process.py  yolo_process.py  yolo_process1.py
vision_bringup/vision_bringup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+325 files in other folders)
