<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="loe@todo.todo">loe</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>python3-pillow</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
